K8S-HomeCluster/Ingress/hypriot-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hypriot
spec:
  rules:
  - host: hypriot.co.local
    http:
      paths:
      - path: /
        backend:
          serviceName: hypriot
          servicePort: 80
